<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up(): void
    {
        Schema::create('documentos', function (Blueprint $table) {
            $table->id();

            $table->foreignId('paciente_id')
                ->constrained('pacientes')
                ->restrictOnDelete();

            $table->foreignId('historia_id')
                ->nullable()
                ->constrained('historias_clinicas')
                ->nullOnDelete();

            $table->foreignId('tratamiento_id')
                ->nullable()
                ->constrained('tratamientos')
                ->nullOnDelete();

            $table->string('tipo', 50);
            $table->string('nombre_archivo', 255);
            $table->string('ruta_archivo', 500);
            $table->string('cloud_id', 255)->nullable();
            $table->bigInteger('tamanio_bytes')->nullable();
            $table->string('mime_type', 100)->nullable();

            $table->timestamps();
            $table->softDeletes();
        });
    }


    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('documentos');
    }
};
